Use java.util.Locale.ROOT to produce 50.000% regardless of the user locale